addition of embedding rank and co_occurance in weighting function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(similarities)
 export(word_vec)
 import(ggplot2)
 import(ggwordcloud)
+import(logger)
 import(text2vec)
 import(tm)
 importFrom(broom,tidy)
@@ -16,5 +17,6 @@ importFrom(dplyr,as_tibble)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,tibble)
+importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(text2vec,sim2)
