implement parallel cleaning with cluster from future

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,tibble)
 importFrom(furrr,future_map)
+importFrom(future,cluster)
 importFrom(future,plan)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
