Bugs all the way down

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,5 @@ importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(parallel,makePSOCKcluster)
 importFrom(parallel,stopCluster)
+importFrom(purrr,reduce)
 importFrom(text2vec,sim2)
